--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -1033,7 +1033,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-font-utils' package, version 7.5",
         "other": {
           "name": "bdftopcf",
           "version": "1.1",
@@ -1044,7 +1043,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "bdftopcf",
           "version": "1.1",
@@ -2505,7 +2503,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "DejaVu compiled fonts",
         "other": {
           "name": "dejavu-fonts",
           "version": "2.37",
@@ -3696,7 +3693,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-font-utils' package, version 7.5",
         "other": {
           "name": "font-util",
           "version": "1.4.1",
@@ -3767,7 +3763,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-font-utils' package, version 7.5",
         "other": {
           "name": "fonttosfnt",
           "version": "1.2.3",
@@ -4581,7 +4576,7 @@
         "other": {
           "name": "golang",
           "version": "1.22.5",
-          "downloadUrl": "https://github.com/microsoft/go/releases/download/v1.22.5-1/go1.22.5-20240702.3.src.tar.gz"
+          "downloadUrl": "https://github.com/microsoft/go/releases/download/1.22.5-2/go1.22.5-20240722.5.src.tar.gz"
         }
       }
     },
@@ -7068,7 +7063,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "iceauth",
           "version": "1.0.8",
@@ -9092,7 +9086,7 @@
         "other": {
           "name": "libecb",
           "version": "9.30",
-          "downloadUrl": "http://cvs.schmorp.de/libecb/?view=tar&pathrev=rxvt-unicode-rel-9_30"
+          "downloadUrl": "http://cvs.schmorp.de/libecb/?view=tar\u0026pathrev=rxvt-unicode-rel-9_30"
         }
       }
     },
@@ -13049,7 +13043,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-font-utils' package, version 7.5",
         "other": {
           "name": "mkfontscale",
           "version": "1.2.2",
@@ -14890,7 +14883,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "oclock",
           "version": "1.0.5",
@@ -25501,7 +25493,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "rgb",
           "version": "1.0.6",
@@ -27362,7 +27353,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "sessreg",
           "version": "1.1.0",
@@ -27423,7 +27413,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-xkb-utils' package, version 7.7",
         "other": {
           "name": "setxkbmap",
           "version": "1.3.4",
@@ -29554,7 +29543,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "x11perf",
           "version": "1.6.1",
@@ -29675,7 +29663,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xclipboard",
           "version": "1.1.4",
@@ -29686,7 +29673,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xclock",
           "version": "1.1.1",
@@ -29707,7 +29693,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xconsole",
           "version": "1.0.8",
@@ -29728,7 +29713,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xcursorgen",
           "version": "1.0.8",
@@ -29809,7 +29793,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xeyes",
           "version": "1.3.0",
@@ -29830,7 +29813,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xfd",
           "version": "1.1.4",
@@ -29841,7 +29823,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xfontsel",
           "version": "1.1.0",
@@ -29872,7 +29853,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xgamma",
           "version": "1.0.6",
@@ -29893,7 +29873,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xhost",
           "version": "1.0.7",
@@ -29924,7 +29903,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xinput",
           "version": "1.6.3",
@@ -29935,7 +29913,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xiswayland",
           "version": "1",
@@ -29946,7 +29923,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-xkb-utils' package, version 7.7",
         "other": {
           "name": "xkbcomp",
           "version": "1.4.7",
@@ -29957,7 +29933,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-xkb-utils' package, version 7.7",
         "other": {
           "name": "xkbevd",
           "version": "1.1.5",
@@ -29968,7 +29943,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-xkb-utils' package, version 7.7",
         "other": {
           "name": "xkbprint",
           "version": "1.0.6",
@@ -29979,7 +29953,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-xkb-utils' package, version 7.7",
         "other": {
           "name": "xkbutils",
           "version": "1.0.6",
@@ -30000,7 +29973,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xkill",
           "version": "1.0.5",
@@ -30011,7 +29983,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xload",
           "version": "1.1.4",
@@ -30022,7 +29993,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xlogo",
           "version": "1.0.6",
@@ -30033,7 +30003,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xmag",
           "version": "1.0.7",
@@ -30044,7 +30013,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xmessage",
           "version": "1.0.6",
@@ -30145,7 +30113,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xmodmap",
           "version": "1.0.9",
@@ -30296,7 +30263,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xpr",
           "version": "1.1.0",
@@ -30317,7 +30283,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xrandr",
           "version": "1.5.0",
@@ -30328,7 +30293,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xrdb",
           "version": "1.1.1",
@@ -30339,7 +30303,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xrefresh",
           "version": "1.0.6",
@@ -30360,7 +30323,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xset",
           "version": "1.2.4",
@@ -30371,7 +30333,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xsetpointer",
           "version": "1.0.1",
@@ -30382,7 +30343,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xsetroot",
           "version": "1.1.2",
@@ -30393,7 +30353,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-server-utils' package, version 7.7",
         "other": {
           "name": "xstdcmap",
           "version": "1.0.3",
@@ -30424,7 +30383,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xvidtune",
           "version": "1.0.4",
@@ -30435,7 +30393,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xwd",
           "version": "1.0.9",
@@ -30446,7 +30403,6 @@
     {
       "component": {
         "type": "other",
-        "comment": "Imported as part of the 'xorg-x11-apps' package, version 7.7",
         "other": {
           "name": "xwud",
           "version": "1.0.6",
@@ -30704,6 +30660,5 @@
         }
       }
     }
-  ],
-  "Version": 1
+  ]
 }
